# SpaceStationCentral

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  config_example.toml  entrypoint.sh  log_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  pylint.yml
alembic/: env.py
alembic/versions/: 1013b783c191_tz_aware_datetimes.py  1fafdb893dd5_initial_migration.py  5024705f5bb5_initial_migration.py  b609e2391344_initial_migration.py
app/: deps.py  init.py  main.py
app/core/: config.py  db.py  exceptions.py  log_handlers.py  logconfig.py  redis.py  typing.py  utils.py
app/database/: models.py
app/database/crud/: ban.py  note.py  player.py
app/fur_discord/: README.md  __init__.py  client.py  config.py  exeptions.py
app/fur_discord/models/: __init__.py  guild.py  user.py
app/oauth/discord/: __init__.py  client.py
app/oauth/discord/models/: __init__.py  guild.py  user.py
app/public/nanoui/: index.html
app/public/nanoui/css/: icons.css  layout_basic.css  layout_default.css  shared.css
app/public/nanoui/js/: index.js
app/routers/: deps.py
app/routes/: player.py  whitelist.py  whitelist_ban.py
app/routes/v1/: admin.py  donate.py  main_router.py  player.py  whitelist.py
app/routes/v1/wl/: whitelist.py  whitelistban.py
app/routes/v2/: main_router.py  player.py
app/routes/wl/: whitelist.py  whitelistban.py
app/schemas/: donate.py  generic.py  player.py  whitelist.py
app/schemas/v1/: donate.py  whitelist.py
app/schemas/v2/: ban.py  donation.py  player.py  whitelist.py
app/tests/: README.md  conftest.py  fixtures.py  test_player_route.py  test_whitelist_route.py  test_whitelistban_route.py
app/tests/ai_made/: test_player_route.py  test_whitelist_route.py
app/tests/basic/: test_basic.py
app/tests/v1/: test_whitelist_route.py  test_whitelistban_route.py
scripts/: lint.py
tests/: conftest.py
tests/api/v2/: test_player_route.py
tests/basic/: test_basic.py
tests/core/: test_config.py  test_db.py  test_log_handlers.py  test_redis.py
tests/models/: test_models.py  test_models_and_crud.py
tests/oauth/discord/: test_client.py
